--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 #----------------------------------------------------------------------------
 # Setup the project
 cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
-project(rdecay02)
+project(FNMCoptimizer)
 
 #----------------------------------------------------------------------------
 # Find Geant4 package, activating all available UI and Vis drivers by default
@@ -31,25 +31,21 @@ file(GLOB headers ${PROJECT_SOURCE_DIR}/include/*.hh)
 #----------------------------------------------------------------------------
 # Add the executable, and link it to the Geant4 libraries
 #
-add_executable(rdecay02 rdecay02.cc ${sources} ${headers})
-target_link_libraries(rdecay02 ${Geant4_LIBRARIES} )
+add_executable(FNMCoptimizer FNMCoptimizer.cc ${sources} ${headers})
+target_link_libraries(FNMCoptimizer ${Geant4_LIBRARIES} )
 
 #----------------------------------------------------------------------------
 # Copy all scripts to the build directory, i.e. the directory in which we
-# build rdecay02. This is so that we can run the executable directly because it
+# build FNMCoptimizer. This is so that we can run the executable directly because it
 # relies on these scripts being in the current working directory.
 #
-set(rdecay02_SCRIPTS
-    debug.mac
-    plotHisto.C
-    rdecay02.in
-    vis.mac
+set(FNMCoptimizer_SCRIPTS
   )
 
-foreach(_script ${rdecay02_SCRIPTS})
+foreach(_script ${FNMCoptimizer_SCRIPTS})
   configure_file(
     ${PROJECT_SOURCE_DIR}/${_script}
-    ${PROJECT_BINARY_DIR}/${_script}
+    ${PROJECT_BINARY_DIR}/${_script}FNMCoptimizer
     COPYONLY
     )
 endforeach()
@@ -57,5 +53,5 @@ endforeach()
 #----------------------------------------------------------------------------
 # Install the executable to 'bin' directory under CMAKE_INSTALL_PREFIX
 #
-install(TARGETS rdecay02 DESTINATION bin)
+install(TARGETS FNMCoptimizer DESTINATION bin)
 
